[gd_scene load_steps=3 format=3 uid="uid://bgoe7q431f0fy"]

[ext_resource type="Script" path="res://BlueLevel/TimerRanOutScene.gd" id="1_bvirq"]

[sub_resource type="Theme" id="Theme_b7f8k"]
default_base_scale = 1.2
default_font_size = 32

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_bvirq")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0.0156863, 0.192157)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LostLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_b7f8k")
text = "Timer Ran out!"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Restart" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="MenuButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back to Menu"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
